Unexpected ABI diffference between armv7 and armv7s in WebCore::GraphicsLayerCA::~GraphicsLayerCA() <http://webkit.org/b/147101>

Reviewed by Michael Saboff.

* platform/graphics/transforms/TransformationMatrix.h: Align
Matrix4 on both armv7 and armv7s.


Canonical link: https://commits.webkit.org/165162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187034 268f45cc-cd09-0410-ab3c-d52691b4dbfc